--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Web Designer <span>Ikenishi Mayu</span></h1>
-                <img src="./images/img_profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/santaojisan.png" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>都内在住のWEBデザイナーです。オンラインで勉強しました。</p>
             </div>
         </header>
@@ -39,7 +39,7 @@
                 <h2 class="text-center">Works</h2>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/website.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -51,7 +51,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/card.png" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
@@ -63,7 +63,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/blog.png" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -75,7 +75,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/card.png" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
@@ -87,7 +87,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/blog.png" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -99,7 +99,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/website.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -111,7 +111,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/website.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -123,7 +123,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/card.png" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
@@ -135,7 +135,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/blog.png" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
